--- a/beginning.html
+++ b/beginning.html
@@ -48,6 +48,7 @@
         <p class="lead blog-description">A narrative about an Asian-American, Computer Science major, sports enthusiast, and a runner</p>
       </div>
 
+
       <div class="row">
 
         <div class="col-sm-8 blog-main">
@@ -86,29 +87,46 @@
           </div><!-- /.blog-post -->
 
           <div class="blog-post">
-            <h2 class="blog-post-title">Another blog post</h2>
-            <p class="blog-post-meta">December 23, 2013 by <a href="#">Jacob</a></p>
+            <h2 class="blog-post-title">First Blog Post</h2>
+            <p class="blog-post-meta">March 10, 2015</p>
+            <pre><code>Hello World!</code></pre>
+            <p>And with that of-so-familiar quote, my blog as officially begun. Originally, this blog was intended as a way for me to work with HTML/CSS and Bootstrap. I wanted to learn something that would be essential to have under my belt as a Computer Science graduate but would not be taught at Bowdoin. However, as I have spent more time thinking about the blog, it has turned into a way for me to also motivate myself through blog posts to focus on projects I wanted to accomplish such as this!</p>
 
-            <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-            <blockquote>
-              <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            </blockquote>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+            <p>I also hope to use this blog as a means of discussing worthy news and other developments in my progression towards being a software engineer. So here's to achieving my goals and for those aspirations to come true!</p>
           </div><!-- /.blog-post -->
 
           <div class="blog-post">
-            <h2 class="blog-post-title">New feature</h2>
-            <p class="blog-post-meta">December 14, 2013 by <a href="#">Chris</a></p>
+            <h2 class="blog-post-title">Web and Mobile Development</h2>
+            <p class="blog-post-meta">March 14, 2015</p>
 
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>The tech world is a constantly evolving field, but it is still essential to keep up with the current state of modern technology. Thus, after spending a few semesters studying the fundamentals of programming, I want to move onto the more practical aspect of Computer Science. I had originally planned on going to a larger school to indulge myself in web development classes, but lets be honest, with the internet as a huge and convenient tool, the millions of people posting on the internet can all be my teachers.</p>
+
+            <p>After reseraching and consulting other fellow Computer Science majors, I compiled a proposal for an Independent Study that focuses on Web and Mobile Development using new tools and langauges to expose myself to the most recent modern tools. I hope to tackle three major parts of Application Development:</p>
             <ul>
-              <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-              <li>Donec id elit non mi porta gravida at eget metus.</li>
-              <li>Nulla vitae elit libero, a pharetra augue.</li>
+              <li>Web Development: Using Meteor, a simple and powerful way of creating web applications, I will learn how to make web applications using JavaScript and the paradigms encountered during web development.</li>
+              <li>Mobile Development: Develop beautiful and practical mobile applications using Swift, the new mobile development language recently introduced by Apple.</li>
+              <li>Databases: Understand how to tackle database-related paradigms when scaling large systems. Beacuse Meteor exclusively uses MongoDB, a significant amount of my database expose during this study will be using MongoDB.</li>
             </ul>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-            <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
+            <p>I will follow the structure of a <a href="http://web.stanford.edu/~ouster/cgi-bin/cs142-winter15/index.php">Stanford Web Development Course</a> that covers both web and mobile development. Since the course uses Ruby on Rails, I will subsitute that with Meteor. The course utilizes Swift, though, so I will closely follow the coursework for that section. The Course description summarizes my goals for this study well.</p>
+
+            <blockquote>
+              "Although the World-Wide Web was initially conceived as a vehicle for delivering documents, it is now being used as a platform for sophisticated interactive applications, displacing the traditional mechanism of installable binaries. Web-based applications offer numerous advantages, such as instant access, automatic upgrades, and opportunities for collaboration on a massive scale. However, creating Web applications requires different approaches than traditional applications and involves the integration of numerous technologies. This class will introduce you to the Web technologies and give you experience creating Web applications. In the process you will learn about markup languages, scripting languages, network protocols, interactive graphics, event-driven programming, and databases, and see how they all work together to deliver exciting applications."
+            </blockquote>
+
+            <p>The culminating project will be a full-stack Meteor Web Application along with at least a natice front-end IOS mobile application. I will do weekly posts about topics learned and application project developments.</p>
+          </div><!-- /.blog-post -->
+
+          <div class="blog-post">
+            <h2 class="blog-post-title">Aspiring at Wespire</h2>
+            <p class="blog-post-meta">March 18, 2015</p>
+
+            <a href="http://www.wespire.com"><img src="wespire.jpeg" style="width:375px;height:150px"></a>
+
+            <blockquote><q>You know Spring is right around the corner when college studenst are looking for internships.</q> -employee at Wespire whose name I really should remember</blockquote>
+
+            <p>For the past few months I have been doing the old search for internships this summer, but this time it was a crucial one. If all goes well, as a rising Senior, I could get a job with the company I intern with this summer after I graduate. A job! Thus, began a rigorous hunt for potential landing spots. Initially, things were not going so hot. I got a few interviews with companies such as Unum in their Software Development division, but I never really heard back from them. I was kinda feeling bummed out, because not only had I not found something to do this summer I also had yet to really latch onto a company and what they do (Maybe that's why I never heard back afterwards...).</p>
+
+            <p>Then, I came across a company called Wespire, a startup company based in Boston that offers an application that provides companies a platform of employee engagement programs based upon behaviorial science. This allows companies to create "brand value" by promoting a socially conscious workplace. Ok, I admit. The company may not be the next billion-dollar company, but I think it has a marketable service, espcially with the rising generation caring more about personal health and the environment. Most importnatly, though, it was a mision that I really believed in and wanted to promote. America has become way to nonchalant about the environment and until recently has also been in a bit of an unhealthy stint (though many are still living such lives). Wespire capitalizes on the attraction of social media and competitions to motivate individuals to lead a more socially responsible life. Thus, once I skimmed through thier website, I immediately contacted the co-founder, Sarah Robinson, and inquired about joining the team this summer, even though there was no advertized "Software Engineer" position. She agreed to chat with me via Skype, and a month later, after interviewing with Dan, the head of Engineering, and John, the head of Operations, I got invited to come into the office yesterday. First thing I noticed was how long the hike was to the 6th floor. They clearly really wanted their employees to live healthy lives too. By the time I made it up the stairs, I was in a classic startup space. Bare room painted over with white. Tables, people, chairs, and computers. Oh, and a ping-pong table in another room. John, the head of Opertions, greeted me at the front and went around the room introducing me to the team and aspects of the office space. I loved everyone I met, and I surpingly did not feel like an outsider throughout my two hours there despite my usual awkwardness. It was a fiendly and funny atmosphere and I am relaly excited to work with them this summer. I am particularly looking forward to the software testing that I will be doing as an intern. The starting date has not been set yet, but I probably will be starting on the first full week on June. Unfortunately, June cannot come fast enough.</p>
           </div><!-- /.blog-post -->
 
           <nav>
@@ -145,7 +163,7 @@
           <div class="sidebar-module">
             <h4>Elsewhere</h4>
             <ol class="list-unstyled">
-              <li><a href="#">GitHub</a></li>
+              <li><a href="https://github.com/thegreenfrog">GitHub</a></li>
               <li><a href="#">Twitter</a></li>
               <li><a href="#">Facebook</a></li>
             </ol>
